[package]
name = "trezor_orchard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orchard = "*"
zcash_address = "*"
zcash_primitives = "0.9.1"
zcash_note_encryption = "*"
blake2b_simd = "*"
pasta_curves = "*"
rand = "*"
rand_core = "*"
nonempty = "*"

[patch.crates-io.orchard]
path = "/home/agi/gh/jarys/orchard"
